--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -12,12 +12,12 @@
     "unstorage": "1.1.4",
     "radix3": "1.0.0",
     "defu": "6.1.2",
-    "ohash": "1.0.0",
-    "ufo": "1.0.1",
-    "scule": "1.0.0",
     "pathe": "1.1.0",
-    "vue": "3.2.47",
+    "scule": "1.0.0",
+    "ufo": "1.0.1",
+    "ohash": "1.0.0",
     "vue-bundle-renderer": "1.0.1",
+    "vue": "3.2.47",
     "unenv": "1.1.1",
     "cookie-es": "0.5.0",
     "uncrypto": "0.1.2",
@@ -28,11 +28,11 @@
     "@vue/shared": "3.2.47",
     "@vue/compiler-ssr": "3.2.47",
     "@vue/compiler-dom": "3.2.47",
-    "@vue/compiler-core": "3.2.47",
     "@vue/runtime-dom": "3.2.47",
-    "estree-walker": "2.0.2",
-    "@babel/parser": "7.20.15",
+    "@vue/compiler-core": "3.2.47",
     "@vue/runtime-core": "3.2.47",
-    "@vue/reactivity": "3.2.47"
+    "estree-walker": "2.0.2",
+    "@vue/reactivity": "3.2.47",
+    "@babel/parser": "7.20.15"
   }
 }
