--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -9,30 +9,30 @@
     "destr": "1.2.2",
     "ofetch": "1.0.0",
     "hookable": "5.4.2",
-    "unstorage": "1.1.4",
     "radix3": "1.0.0",
+    "unstorage": "1.1.4",
     "defu": "6.1.2",
     "pathe": "1.1.0",
-    "scule": "1.0.0",
     "ufo": "1.0.1",
     "ohash": "1.0.0",
+    "scule": "1.0.0",
     "vue-bundle-renderer": "1.0.1",
     "vue": "3.2.47",
     "unenv": "1.1.1",
     "cookie-es": "0.5.0",
-    "uncrypto": "0.1.2",
     "iron-webcrypto": "0.4.0",
+    "uncrypto": "0.1.2",
     "@vue/server-renderer": "3.2.47",
     "source-map": "0.6.1",
     "buffer-from": "1.1.2",
     "@vue/shared": "3.2.47",
     "@vue/compiler-ssr": "3.2.47",
     "@vue/compiler-dom": "3.2.47",
-    "@vue/runtime-dom": "3.2.47",
     "@vue/compiler-core": "3.2.47",
-    "@vue/runtime-core": "3.2.47",
+    "@vue/runtime-dom": "3.2.47",
     "estree-walker": "2.0.2",
-    "@vue/reactivity": "3.2.47",
-    "@babel/parser": "7.20.15"
+    "@babel/parser": "7.20.15",
+    "@vue/runtime-core": "3.2.47",
+    "@vue/reactivity": "3.2.47"
   }
 }
